Fix z-index for form overlay

--- a/src/scripts/components/h5peditor-portfolio-placeholder-form-manager.scss
+++ b/src/scripts/components/h5peditor-portfolio-placeholder-form-manager.scss
@@ -53,7 +53,7 @@
   box-sizing: border-box;
   position: relative;
   display: flex;
-  z-index: 3;
+  z-index: 0;
   justify-content: space-between;
   align-items: flex-start;
   box-shadow: 0 2px 2px $form-manager-box-shadow;
